Defined page minimum height to prevent cutting off content

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,12 @@ body {
     background-color: #333;
 }
 
+html,
+body,
+#bg[_ngcontent-c1] {
+    min-height: 650px;
+}
+
 html body *,
 html body button.btn.btn-link {
     font-family: "Andale Mono", Arial, sans-serif !important;
